// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox matches snapshot when has a label 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-6:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-4 {
  height: 16px;
  width: 16px;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-5 {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.emotion-5:hover {
  cursor: pointer;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: calc(16px + 2px);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
  margin-left: 1px;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="emotion-7"
>
  <label
    className="emotion-6 undefined"
    htmlFor={1}
  >
    <div
      className="emotion-4"
    >
      <input
        checked={false}
        className="emotion-0"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="emotion-3"
        data-element="sprite"
      >
        <label
          className="emotion-2"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check emotion-1"
          />
        </label>
      </div>
    </div>
    <label
      className="emotion-5"
      data-element="label"
      htmlFor={1}
    >
      Label
    </label>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when has a label as react node 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-7:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-4 {
  height: 16px;
  width: 16px;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-6 {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.emotion-6:hover {
  cursor: pointer;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: calc(16px + 2px);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
  margin-left: 1px;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

.emotion-5 {
  display: inline;
  font-weight: 500;
  -webkit-letter-spacing: 0.01rem;
  -moz-letter-spacing: 0.01rem;
  -ms-letter-spacing: 0.01rem;
  letter-spacing: 0.01rem;
  color: #172b4e;
  font-size: 1rem;
}

<div
  className="emotion-8"
>
  <label
    className="emotion-7 undefined"
    htmlFor={1}
  >
    <div
      className="emotion-4"
    >
      <input
        checked={false}
        className="emotion-0"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="emotion-3"
        data-element="sprite"
      >
        <label
          className="emotion-2"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check emotion-1"
          />
        </label>
      </div>
    </div>
    <label
      className="emotion-6"
      data-element="label"
      htmlFor={1}
    >
      <span
        className="emotion-5"
      >
        Label
      </span>
    </label>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is checked 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-5:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-4 {
  height: 16px;
  width: 16px;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: calc(16px + 2px);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
  margin-left: 1px;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="emotion-6"
>
  <label
    className="emotion-5 undefined"
    htmlFor={1}
  >
    <div
      className="emotion-4"
    >
      <input
        checked={true}
        className="emotion-0"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="emotion-3"
        data-element="sprite"
      >
        <label
          className="emotion-2"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check emotion-1"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is large 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  height: 16px;
  width: 16px;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: calc(16px + 2px);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
  margin-left: 1px;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-5:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-5 > div {
  height: 24px;
  width: 24px;
}

.emotion-5 [data-element='icon'],
.emotion-5 [data-element='locked-icon'] {
  line-height: calc(24px + 5px);
}

.emotion-5 [data-element='icon'] > i,
.emotion-5 [data-element='locked-icon'] > i {
  font-size: 1rem !important;
}

<div
  className="emotion-6"
>
  <label
    className="emotion-5"
    htmlFor={1}
  >
    <div
      className="emotion-4"
    >
      <input
        checked={false}
        className="emotion-0"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="emotion-3"
        data-element="sprite"
      >
        <label
          className="emotion-2"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check emotion-1"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is not checked 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-5:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-4 {
  height: 16px;
  width: 16px;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: calc(16px + 2px);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
  margin-left: 1px;
}

.emotion-1 {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="emotion-6"
>
  <label
    className="emotion-5 undefined"
    htmlFor={1}
  >
    <div
      className="emotion-4"
    >
      <input
        checked={false}
        className="emotion-0"
        id={1}
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
      />
      <div
        className="emotion-3"
        data-element="sprite"
      >
        <label
          className="emotion-2"
          data-element="icon"
          htmlFor={1}
        >
          <i
            className="Drycon Drycon-check emotion-1"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox matches snapshot when is read only 1`] = `
.emotion-1 {
  color: inherit;
}

.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  height: 16px;
  width: 16px;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  visibility: hidden;
}

.emotion-0:checked + [data-element='sprite'] [data-element='icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.emotion-0:checked + [data-element='sprite'] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.emotion-0:disabled + [data-element='sprite'] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-2 {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: calc(16px + 2px);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.emotion-2 > i {
  font-size: 0.8rem;
  margin-left: 1px;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
  pointer-events: none;
}

.emotion-5:hover [data-element='sprite'] {
  background: #879ba6;
}

.emotion-5 [data-element='sprite'] {
  background: #eaeff4 !important;
}

.emotion-5 [data-element='locked-icon'] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
  background: none;
  color: #879ba6;
}

<div
  className="emotion-6"
>
  <label
    className="undefined emotion-5"
    htmlFor={1}
  >
    <div
      className="emotion-4"
    >
      <input
        checked={true}
        className="emotion-0"
        id={1}
        onChange={[Function]}
        readOnly={true}
        type="checkbox"
      />
      <div
        className="emotion-3"
        data-element="sprite"
      >
        <label
          className="emotion-2"
          data-element="locked-icon"
        >
          <i
            className="emotion-1 Drycon Drycon-lock"
          />
        </label>
      </div>
    </div>
  </label>
</div>
`;
